Added some screenshots to the readme and continued adding content to a couple of the notebooks

--- a/japanese-notebook/japenese-notebook.tex
+++ b/japanese-notebook/japenese-notebook.tex
@@ -47,8 +47,29 @@
 My self-study Japanese notes.
 \end{abstract}
 
-\chapter{Word list:}
-
+\chapter{Vocab list:}
+\begin{enumerate}
+	\item ありがとう = Thank you\\
+		arigato
+	\item すみません = Excuse me/I'm sorry\\
+		sumimasen
+	\item トイレ = Bathroom\\
+		toire
+	\item 駅 = Train station\\
+		eki
+	\item ホテル = Hotel\\
+		hoteru
+	\item コンビニ = Convenience store
+		konbini
+	\item おばあさん = Grandmother\\
+		o ba a sa n
+	\item (name of place) はどこですか = Where is (name of place)?\\
+		wa doko desu ka\\
+		"wa" (は) marks the place as subject of sentence\\
+		"doko" (どこ) means "where"\\
+		"desu" (です) roughly translates to "is" (also "be")\\
+		"ka" (か) creates a question\\
+\end{enumerate}
 
 
 
