Added some notebooks and updated others

--- a/template/main.tex
+++ b/template/main.tex
@@ -15,6 +15,7 @@
 \usepackage{geometry}
 \usepackage{fancyhdr}
 \usepackage{hyperref}
+\usepackage{listings}
 \setCJKmainfont{Source Han Sans JP}
 \setCJKsansfont{Source Han Sans JP}
 \definecolor{titlepagecolor}{cmyk}{1,.60,0,.40}
@@ -57,7 +58,7 @@ Quick explanation of document.
 \section{Adding images}
 Remember all images are stored in the path set at the start of the document.
 
-\includegraphics[width=0.75\textwidth]{latexMeme}
+%\includegraphics[width=0.75\textwidth]{latexMeme}
 
 \section{Lists}
 \begin{enumerate}
