Updated bk and dr notebook

--- a/C-Notebook/bk_and_dr_notebook.tex
+++ b/C-Notebook/bk_and_dr_notebook.tex
@@ -52,6 +52,49 @@
 \chapter{A tutorial introduction}
 * See excercises in the external folder marked: programs
 
+\section{Getting started}
+\begin{enumerate}
+	\item Nothing really new in this section.
+\end{enumerate}
+
+\section{Variables and Arithmetic Expressions}
+\textbf{Notes on the fahrenheit celsius program:}
+\begin{enumerate}
+	\item Formula to use: Celsius = (5/9)(fahrenheit-32)
+	\item This formula will be used to calculate the celsius and fahrenheit equivalents.
+	\item Each line of the table is computed using a while that repeats once per output line.
+	\item The while loop will test if the condition is true (fahr is less than or equal to upper.
+	\item The body of the loop will then be executed.
+	\item The reason for multiplying by 5 and then dividing by 9 instead of just multiplying by 5/9 is that integer division is truncated.
+		(any fractional part is discarded)
+\end{enumerate}
+The code should look something like this
+\lstinputlisting[
+		caption=Template Code Block, % Caption above the listing
+		label=lst:template, % Label for referencing this listing
+		language=C, % Specificies language in the block
+		frame=single, % Frame around the code listing
+		showstringspaces=false, % Don't put marks in string spaces
+		numbers=left, % Line numbers on left
+		numberstyle=\tiny, % Line numbers styling
+	]{programs/fahr-celc.c}
+	This is a very basic example of how code blocks will look in the document.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
