--- a/bash_notebook/bash-notebook.tex
+++ b/bash_notebook/bash-notebook.tex
@@ -482,6 +482,207 @@ $ (( 5 > 0 )) && echo "Five is greater than zero."
 Five is greater than zero.
 \end{lstlisting}
 
+\chapter{Shell, init files, variables and exapansion}
+
+\section{Learning objectives}
+\begin{enumerate}
+	\item What are the '/etc/profile', '/etc/profile.d' and '.bashrc' files?
+	\item What are local and global variables?
+	\item What are shell variables and how to use them?
+	\item What are shell expansions?
+	\item Shell arithmetic
+	\item Shell aliases
+\end{enumerate}
+
+\section{Resources and man pages}
+\subsection{Links}
+\begin{enumerate}
+	\item \href{http://linuxcommand.org/lc3_lts0080.php}{Expansions}
+	\item \href{https://www.gnu.org/software/bash/manual/html_node/Shell-Arithmetic.html}{Shell arithmetic}
+	\item \href{https://tldp.org/LDP/Bash-Beginners-Guide/html/sect_03_02.html}{Variables}
+	\item \href{https://tldp.org/LDP/Bash-Beginners-Guide/html/sect_03_01.html}{Shell initlialization files}
+	\item \href{http://www.linfo.org/alias.html}{Shell aliases}
+	\item \href{https://s3.amazonaws.com/alx-intranet.hbtn.io/uploads/misc/2021/6/9112669886fd446a2aa3113c31319d1f468dc160.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUSBVO6H7D%2F20230516%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230516T052125Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=166511ec18d6352ae3822e0fbf53ddd166240e72c8ac7a84e3c265b834c76c4e}{Technical writing}
+\end{enumerate}
+
+\subsection{man and help pages}
+\begin{enumerate}
+	\item printenv :  Print  the  values  of the specified environment VARIABLE(s).
+       If no VARIABLE is specified, print name and value  pairs  for
+       them all.
+   \item set : If no options or arguments are specified, set shall write the
+       names  and values of all shell variables in the collation se‐
+       quence of the current locale.
+   \item unset : Each variable or function specified by name shall be unset
+   \item export : give export attribute to specified variables which will cause to be in the enviroment of subsequently executed commands
+   \item alias : Create alternate names for commands or string of commands to make your life easier
+   \item unalias : remove an alias
+   \item . : ?
+   \item source : Evaluate a file or resource as a Tcl script. Used after changes are made to .bashrc for them to take affect
+   \item printf : format and print data
+\end{enumerate}
+
+
+\section{The notes:}
+\subsection{Expansions}
+Any command that is entered into the command line goes through several 
+processes before the result is output. Consider how much impact the "*" 
+character can affect a command. This process is called expansion.\\\\
+
+\textbf{Pathname expansion:}\\
+The mechanism that makes wildcards work is called "pathname expansion". Consider 
+how we can take the output of a normal 'ls' command and add a wildcard to it to 
+display a different output.
+\begin{lstlisting}[language=Bash,framexleftmargin=5mm,frame=single,xleftmargin=18pt]
+[me@linuxbox me]$ ls
+Desktop
+ls-output.txt
+Documents Music
+Pictures
+Public
+Templates
+Videos
+\end{lstlisting}
+Examples of expansions in this context:
+\begin{lstlisting}[language=Bash,framexleftmargin=5mm,frame=single,xleftmargin=18pt]
+[me@linuxbox me]$ echo D*
+Desktop Documents
+\end{lstlisting}
+
+\begin{lstlisting}[language=Bash,framexleftmargin=5mm,frame=single,xleftmargin=18pt]
+[me@linuxbox me]$ echo *s
+Documents Pictures Templates Videos
+\end{lstlisting}
+
+\begin{lstlisting}[language=Bash,framexleftmargin=5mm,frame=single,xleftmargin=18pt]
+[me@linuxbox me]$ echo [[:upper:]]*
+Desktop Documents Music Pictures Public Templates Videos
+\end{lstlisting}
+
+\vspace{2.5mm}
+
+\textbf{Tilde expansion}\\
+The "~" (tilde) character has special meaning in bash. It is used to specify 
+the home directory. Without the tilde character we can also use "/home/" and 
+"\$HOME".
+
+\vspace{2.5mm}
+
+\textbf{Arithmetic expansion}\\
+You can use the command line as a calculator if you really want...
+
+\vspace{2.5mm}
+enumerate\textbf{Brace expansion}\\
+Brace expansion is pretty powerful when used correctly.\\
+Patterns to be brace expanded may contain a leading portion called a preamble 
+and a trailing portion called a postscript. The expression can contain either a 
+comma seperated list of strings or a range of integers/single characters. There 
+can be no white space in the braces.\\\\
+
+Below is an example of a great use for this sort of expansion:
+
+\begin{lstlisting}[language=Bash,framexleftmargin=5mm,frame=single,xleftmargin=18pt]
+[me@linuxbox me]$ mkdir Photos
+[me@linuxbox me]$ cd Photos
+[me@linuxbox Photos]$ mkdir {2017..2019}-{01..12}
+[me@linuxbox Photos]$ ls
+2017-01 2017-07 2018-01 2018-07 2019-01 2019-07
+2017-02 2017-08 2018-02 2018-08 2019-02 2019-08
+2017-03 2017-09 2018-03 2018-09 2019-03 2019-09
+2017-04 2017-10 2018-04 2018-10 2019-04 2019-10
+2017-05 2017-11 2018-05 2018-11 2019-05 2019-11
+2017-06 2017-12 2018-06 2018-12 2019-06 2019-12
+\end{lstlisting}
+This example shows a fast way to create a list of directories to store photographs 
+or any other sort of file that needs to be date organized. 
+
+\vspace{2.5mm}
+
+\textbf{Parameter Expansion}\\
+This will be covered more later.\\
+For now just consider how variables in bash may be utilised.\\
+This command will print all shell variables.
+\begin{lstlisting}[language=Bash,framexleftmargin=5mm,frame=single,xleftmargin=18pt]
+printenv | less
+\end{lstlisting}
+
+\subsection{Shell Arithmetic}
+As previously mentioned the shell allows arithmetic (use it as a calculator), 
+this has wider implications when considering it's application to variables.\\
+Arithmetic in the shell is the same for the most part as C, the list below is 
+in order of their \href{https://tldp.org/LDP/abs/html/opprecedence.html}{presedence}. (AKA, what order they will execute in, sort of like 
+shell's version of BODMAS)\\
+
+\subsection{Variables}
+Variables can are in uppercase characters by convention.\\
+In bash there are two kinds of variables:\\
+
+\textbf{Global Variables}\\
+Variables that are available in all shells. These variables can be listed by 
+using the 'env' or 'printenv' commands.\\\\
+
+\textbf{Local Variables}
+Local variables aare only available in the current shell. Use the 'set' command
+ without any options to list these variables and functions.\\\\
+
+ \textbf{Variables by content}\\
+Variables can be further divided into four other groups according to their 
+contents:
+\begin{enumerate}
+	\item String 
+	\item Integers
+	\item Constants
+	\item Arrays
+\end{enumerate}
+
+\textbf{Creating Variables}
+Variables are case sensitive and by default declared in capital letters. 
+Declaring a local variable in lower case letters is also acceptable but not 
+neccessary. Basically follow your normal naming conventions with local variables
+and think of global variables like constants in C.\\\\
+
+\textbf{Syntax for declaring a variable}\\
+\begin{lstlisting}[language=Bash,framexleftmargin=5mm,frame=single,xleftmargin=18pt]
+#Global variable
+VARNAME="value"
+#Local variable
+varName="value"
+\end{lstlisting}
+
+\textbf{Syntax for exporting variables}\\
+\begin{lstlisting}[language=Bash,framexleftmargin=5mm,frame=single,xleftmargin=18pt]
+export VARNAME="value"
+\end{lstlisting}
+Note that a child subshell can change variables locally not globally, any global 
+changes need to be made where the variable was declared.\\\\
+
+\textbf{Reserved Variables}\\
+Just like C there are some keywords/variables that are designated by the language.
+Therefore these variables cannot be changed.
+\begin{center}
+\includegraphics[width=1\textwidth]{variables}
+\end{center}
+
+\section{Shell initlialization files}
+\subsection{System-wide config file}
+
+\textbf{/etc/profile}\\
+All settings that should apply to all user enviroment's should be set here. \\
+
+\textbf{.bashrc}
+Useful file for creating aliases and adding applications to your path, it can 
+also be used to autostart applications on Arch Linux.\\
+Here is an example from my .bashrc file:
+\begin{lstlisting}[language=Bash,framexleftmargin=5mm,frame=single,xleftmargin=18pt]
+eval $(starship init ion)
+#ignore upper and lowercase when TAB completion
+bind "set completion-ignore-case on"
+### ALIASES ###
+alias nv='nvim'
+alias ls='ls --color=auto'
+\end{lstlisting}
+
+
 
 
 
