--- a/math_notebook/discrete-math-notebook.tex
+++ b/math_notebook/discrete-math-notebook.tex
@@ -10,6 +10,8 @@
 \graphicspath{{images/}}%%% Where your images are stored (relative to main file)
 \usepackage{xeCJK}		%%% Include japanese/chinese/korean
 \usepackage{amsmath} 	%%% Math related
+\usepackage{amsfonts}
+\usepackage{amssymb}
 \usepackage{xcolor}
 \usepackage{float}
 \usepackage{geometry}
@@ -58,11 +60,61 @@ capital letters such as A, B, S or X.\\\\
 An object that belongs to a set is a called a member/element of that set. For 
 example if 'a' is an object and A is a set we can denote it by writing:\\
 
+This is a test line $\frac{x}{y}$
 
 
 
 
 
+
+
+
+
+\chapter{Math in latex cheat reference}
+
+$	A \cup B		$\\
+$	A \cap B		$\\
+$	A \backslash B	$\\
+$	A \triangle B	$\\
+$	x \in S			$\\
+$	x \not\in S		$\\
+$	S \subseteq T	$\\
+$	S \not\subseteq T$\\
+$	|s|				$\\
+$	\wp(S)			$\\
+$	\emptyset		$\\
+$	\mathbb{N}		$\\
+$	\mathbb{Z}		$\\
+$	\mathbb{R}		$\\
+$	\aleph_0		$\\
+$	\frac{1}{2}		$\\
+$	\sqrt{x}		$\\
+$	x^y				$\\
+$	\sum			$\\
+$	\Sigma			$\\
+$	\geq			$\\
+$	\infty			$\\
+$	\leq			$\\
+$	\pi				$\\
+$	\emptyset		$\\
+$	\oplus			$\\
+$	\rightarrow		$\\
+$	\int			$\\
+$	\approx			$\\
+$	\neq			$\\
+
+
+
+
+
+
+\begin{enumerate}
+	\item This is item one
+	\item This is item two
+	\item aa
+	\item aa
+	\item zz
+\end{enumerate}
 
 
 
